Commit com implementações parciais do desafio votação